# task_cli

./: CMakeLists.txt  ReadMe.md  compile_commands.json
.cache/clangd/index/: LinkedList.cpp.9314C2F5EF56D866.idx  LinkedList.hpp.4D1CAF6650717C35.idx  Menu.hpp.8201FCBCAD50BCAB.idx  Node.hpp.9A6BDA5448995C4A.idx  Status.hpp.4A03004442FA5E90.idx  Utils.hpp.5C95AD3AE46BC2DF.idx  main.cpp.BDDA071D973DC865.idx
src/: LinkedList.cpp  main.cpp
src/include/: LinkedList.hpp  Menu.hpp  Node.hpp  Status.hpp  Utils.hpp  test.hpp
